<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title_comm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="?android:attr/colorPrimary"
            android:padding="@dimen/margin"
            android:text="@string/communication"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_http"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/communication_with_http_server" />

        <Button
            android:id="@+id/btn_http_demos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/http_demos" />

        <TextView
            android:id="@+id/txt_title_con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:background="?android:attr/colorPrimary"
            android:padding="@dimen/margin"
            android:text="@string/concurrency"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/btn_block_ui"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/block_ui_for_7_seconds" />

        <Button
            android:id="@+id/btn_asyncdemotask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/start_asyncdemotask" />

        <Button
            android:id="@+id/btn_demothread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/start_demothread" />

        <Button
            android:id="@+id/btn_asyncmultitask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/start_asyncmultitask" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>